
syntax = "proto3";

package content_server.proto;

//import "dart_options.proto";
import "src/proto/dart_options.proto";

option (dart_package) = "content_server.proto.service";

service Hello {
  rpc PutThing (PutThingRequest) returns (PutThingResponse) {}
  rpc GetThing (GetThingRequest) returns (GetThingResponse) {}
}

message PutThingRequest {
  int64 id = 1;
  string thing = 2;
}

message PutThingResponse {
  string old_value = 1;
}

message GetThingRequest {
  int64 id = 1;
}

message GetThingResponse {
  string thing = 1;
}
